# NyxBox

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  dump.rdb  freezedideas.md  main.py  pyproject.toml  requirements.txt  styles.tcss  three-sum.py  two-sum.py
.github/workflows/: python-publish.yml
backend/: config.py  database.py  db_management.py  main.py  models.py  nyxbox.db  requirements.txt  schemas.py
backend/admin_tools/: db_management.py
backend/challenges/: three-sum.json
backend/static/: auth_complete.html  auth_style.css  index.html  index_style.css  style.css
challenges/: palindrome-number.json  three-sum.json  two-sum.json
language-support/: highlights-cpp.scm
nyxbox/: main.py  styles.tcss  webapp.py
nyxbox/challenges/: three-sum.json  two-sum.json
nyxbox/plugins/: auth_utils.py  challenge_loader.py  challenge_view.py  editor_tools.py  utils.py
nyxbox/plugins/code_runners/: c_runner.py  cpp_runner.py  java_runner.py  js_runner.py  py_runner.py
plugins/: challenge_loader.py  challenge_view.py  editor_tools.py
plugins/code_runners/: c_runner.py  cpp_runner.py  java_runner.py
