[project]
name = "NyxBox"
version = "0.1.2"
description = "Exercisim inspired coding challenges, right in your terminal!"
authors = [{ name="Rainger", email="tilt-hazard-swept@duck.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=3.2.0",
    "rich>=13.7.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-java>=0.23.5",
    "typing-extensions>=4.12.2"
]

[project.scripts]
nyxbox = "nyxbox.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nyxbox = [
  "styles.tcss",
  "challenges/*.json",
  "language-support/*.scm"
]
