[project]
name = "NyxBox"
version = "1.0.3"
description = "LeetCode inspired app in your terminal, powered with Python and built on Textual!"
authors = [{ name="Rainger", email="tilt-hazard-swept@duck.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "textual>=3.2.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-java>=0.23.5",
    "typing-extensions>=4.12.2",
    "textual[syntax]",
    "qrcode",
    "rich-pixels",
    "pillow",
    "requests",
    "httpx"
]

[project.urls]
"main page" = "https://nyxbox.thisisrainy.hackclub.app"
"github" = "https://github.com/thisiscid/NyxBox"

[project.scripts]
nyxbox = "nyxbox.main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["backend/*", "backend", "*/backend"]

[tool.setuptools.exclude-package-data]
"*" = ["backend/*"]

[tool.setuptools.package-data]
nyxbox = [
  "styles.tcss",
  "challenges/*.json",
  "language-support/*.scm"
]

[tool.ruff]
target-version = "py312"
